fix: remove float attribute in footer to prevent overlap

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -236,7 +236,7 @@ hr {
 
 footer {
   width:270px;
-  float:left;
+  /*float:left;*/
   position:fixed;
   bottom:50px;
 }
